UI saveButtons and Dialog btn layouts refactoring